tests/NormalTests/paczka1/small_fuzzy/37748625.err
Error in line 3: 6rRqPcV35 S759 22,9
Error in line 7: xVTV S451 31,3
Error in line 12: xVTV S832 4,5
